# FightFoodWaste

./: .directory  CMakeLists.txt  index.php
api/collection/count/: index.php
api/pattern/: delivery.php  index.php  user.php  warehouse.php
api/token/: utils.php
api/utils/: index.php
elements/: footer.html  navbar.html
elements/account/: user.html
elements/dashboard/: admin.html  user.html
elements/map/: index.html
elements/package/: admin.html  table.html  user.html
elements/service/: index.html
elements/stock/: index.html  table.html
elements/users/: index.html
elements/webgl/: index.html
include/: dashboard.h  discovery_server.h  list.h  login.h  product.h  request.h  server.h  user.h  utils.h
js/: request.js  user.js
js/display/: account.js  dashboard.js  map.js  package.js  service.js  stock.js  users.js  utils.js
js/global/: index.js
lib/tag/: tagsinput.css  tagsinput.js
resources/: dashboard.glade  dashboard.glade~  login.glade  login.glade~
resources/views/: dashboard.fxml  menu.fxml
src/core/: main.c
src/entity/: product.c
src/list/: list.c
src/main/: AndroidManifest.xml
src/network/: discovery_server.c  request.c  server.c
src/utils/: utils.c
src/views/: dashboard.c  login.c
styles/: dashboard.css  main.css  map.css
views/account/: index.html
views/dashboard/: index.html
views/login/: index.html
views/map/: index.html
views/package/: index.html
views/register/: index.html
views/service/: index.html
views/showcase/: index.html
views/stock/: index.html
views/users/: index.html
(+22 files in other folders)
